# SmartCalcV3.0-on-Java

./: .gitignore  README.md  pom.xml
src/main/cpp/credit/: credit_calc_model.cc  credit_calc_model.h
src/main/cpp/deposit/: deposit_calc_model.cc  deposit_calc_model.h
src/main/cpp/smart_calc/: smart_calc_model.cc  smart_calc_model.h
src/main/java/edu/school21/butterba/smartcalc/: Main.java
src/main/java/edu/school21/butterba/smartcalc/model/: CapitalizationPeriodicity.java  HistoryModel.java
src/main/java/edu/school21/butterba/smartcalc/model/core/: CreditCalcModel.java  DepositCalcModel.java  SmartCalcModel.java
src/main/java/edu/school21/butterba/smartcalc/presenter/: CreditCalcPresenter.java  DepositCalcPresenter.java  GraphPresenter.java  SmartCalcPresenter.java
src/main/java/edu/school21/butterba/smartcalc/view/: ListCellView.java
src/main/java/edu/school21/butterba/smartcalc/view/controllers/: CreditCalcController.java  DepositCalcController.java  GraphController.java  SmartCalcController.java
src/main/resources/: CMakeLists.txt  log4j2.xml
src/main/resources/css/: credit_calc.css  deposit_calc.css  smart_calc.css
src/main/resources/fxml/: credit_calc.fxml  deposit_calc.fxml  graph.fxml  help.fxml  smart_calc.fxml
src/test/java/edu/school21/butterba/smartcalc/model/core/: CreditCalcModelTest.java  DepositCalcModelTest.java  SmartCalcModelTest.java
src/test/resources/: binary_calculations.csv  function_calculations.csv
